# arch

./: .gitignore  ARCHITECTURE.md  BADGES.md  CONTRIBUTING.md  LICENSE  README.md  plan_refactor_simplify_patterns.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
assets/diagrams/: architecture.json
docs/: index.md
docs/adr/: 001-template-based-architecture.md
examples/: README.md  basic_usage.py
skill/: .archconfig.example.json  .archconfig.schema.json  CHANGELOG.md  README.md  SKILL.md  config.py  persistence.py  routing.py  routing.py.backup  test_debug.py
skill/resources/: cli.md  data-pipeline.md  deep.md  fast.md  precedent.md  python.md  shared_frameworks.md
skill/tests/: test_config_caching.py  test_config_integration.py  test_config_merging.py  test_config_thread_safety.py  test_config_types.py  test_config_validation.py  test_routing.py
tests/: __init__.py  test_examples.py  test_main.py
