[project]
name = "arch"
version = "0.5.0"
description = "Adaptive Architecture Advisor - Template-based architectural decision making for Claude Code"
requires-python = ">=3.10"
dependencies = []

readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/arch"
Repository = "https://github.com/arch"
Documentation = "https://github.com/arch#readme"
Issues = "https://github.com/arch/issues"

[project.dependencies]
pytest>=7.0.0

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["skill/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel.shared-data]
"skill" = "claude/skills/arch"
